--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -15,12 +15,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Test Ansible
+        run: |
+          rm -rf ~/.ssh || echo "~/.ssh doesn't exist"
+          ssh-keygen -t rsa -f ~/.ssh/id_rsa -q -P "" -C ansible
+          vault write -field=signed_key ssh-client-signer/sign/signer-role public_key=@$HOME/.ssh/id_rsa.pub > ~/.ssh/id_rsa-cert.pub
+          chmod 600 ~/.ssh/id_rsa-cert.pub
+          export ANSIBLE_HOST_KEY_CHECKING=False
+          ansible-playbook -i inventory --private-key ~/.ssh/id_rsa --user ansible k8s-single-node.yaml --check
+
       - name: Run Ansible
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         run: |
           rm -rf ~/.ssh || echo "~/.ssh doesn't exist"
-          ssh-keygen -t rsa -f ~/.ssh/id_rsa -q -P "" -C allan
+          ssh-keygen -t rsa -f ~/.ssh/id_rsa -q -P "" -C ansible
           vault write -field=signed_key ssh-client-signer/sign/signer-role public_key=@$HOME/.ssh/id_rsa.pub > ~/.ssh/id_rsa-cert.pub
           chmod 600 ~/.ssh/id_rsa-cert.pub
           export ANSIBLE_HOST_KEY_CHECKING=False
-          ansible-playbook -i inventory --private-key ~/.ssh/id_rsa --user allan k8s-single-node.yaml
+          ansible-playbook -i inventory --private-key ~/.ssh/id_rsa --user ansible k8s-single-node.yaml
