--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,14 +8,14 @@ variables:
 
 steps:
 
-- displayName: 'Create SSH keys'
-  script: |
+- script: |
     ssh-keygen -t rsa -f ~/.ssh/id_rsa -q -P "" -C ansible
     vault write -field=signed_key ssh-client-signer/sign/signer-role public_key=@$HOME/.ssh/id_rsa.pub > ~/.ssh/id_rsa-cert.pub
     chmod 600 ~/.ssh/id_rsa-cert.pub
+  displayName: 'Create SSH keys'
 
-- displayName: 'Run Ansible'
-  script: |
+- script: |
     export ANSIBLE_HOST_KEY_CHECKING=False
     export ANSIBLE_REMOTE_TEMP=/tmp
     ansible-playbook -i inventory --private-key ~/.ssh/id_rsa --user ansible k8s-single-node.yaml
+  displayName: 'Run Ansible'
