--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -58,7 +58,7 @@
     dest: /etc/sysctl.d/k8s.conf
 
 - name: Reload sysctl
-  ansible.builtin.shell: sysctl --system
+  shell: sysctl --system
 
 - name: Make the Swap inactive
   command: swapoff -a
@@ -76,7 +76,7 @@
     mode: '0755'
 
 - name: Create containerd config
-  ansible.builtin.shell: |
+  shell: |
     containerd config default | tee /etc/containerd/config.toml 
     sed -i "s/SystemdCgroup = false/SystemdCgroup = true/g" /etc/containerd/config.toml
 
