--- a/roles/istio/tasks/main.yml
+++ b/roles/istio/tasks/main.yml
@@ -14,7 +14,7 @@
     state: present
 
 - name: Download Istio release
-  ansible.builtin.shell: |
+  shell: |
     wget https://github.com/istio/istio/releases/download/{{ istio_version }}/istio-{{ istio_version }}-linux-amd64.tar.gz
     tar -xzvf istio-{{ istio_version }}-linux-amd64.tar.gz
     mv istio-{{ istio_version }} /tmp
